# lib/api-spec/openapi.yaml
@@ -250,6 +250,12 @@ paths:
           schema:
             type: string
             enum: ["true", "false"]
+        - name: activeOnly
+          in: query
+          required: false
+          schema:
+            type: string
+            enum: ["true", "false"]
         - name: limit
           in: query
           required: false
